--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "frontend/node_modules/.bin/react-scripts start",
+    "build": "frontend/node_modules/.bin/react-scripts build",
+    "test": "frontend/node_modules/.bin/react-scripts test",
+    "eject": "frontend/node_modules/.bin/react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
