create react app #1

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,10 +16,10 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "frontend/node_modules/.bin/react-scripts start",
-    "build": "frontend/node_modules/.bin/react-scripts build",
-    "test": "frontend/node_modules/.bin/react-scripts test",
-    "eject": "frontend/node_modules/.bin/react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
