--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.11.5",
     "@types/node": "^14.11.2",
     "concurrently": "^5.3.0",
+    "dotenv-webpack": "^3.0.0",
     "nodemon": "^2.0.4",
     "supervisor": "^0.12.0",
     "typescript": "^4.0.3"
