--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.2.4",
     "apollo-server-express": "^2.18.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
