--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,21 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.49",
+    "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.6",
     "@types/reactstrap": "^8.5.1",
     "bootstrap": "^4.5.2",
-    "mdbreact": "^4.27.0",
     "graphql": "^15.3.0",
+    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-search-field": "^1.1.0",
     "reactstrap": "^8.6.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
