--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/reactstrap": "^8.5.1",
+    "apollo-client": "^2.6.10",
     "bootstrap": "^4.5.2",
-    "mdbreact": "^4.27.0",
     "graphql": "^15.3.0",
+    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "react-search-field": "^1.1.0",
