#9 viser nå liste med alle land

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-apollo-hooks": "^0.5.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
