--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.49",
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.8",
+    "@types/react-js-pagination": "^3.0.3",
     "@types/react-router-dom": "^5.1.6",
     "@types/reactstrap": "^8.5.1",
     "bootstrap": "^4.5.2",
@@ -22,6 +23,7 @@
     "react-apollo-hooks": "^0.5.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-search-field": "^1.1.0",
