--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-search-field": "^1.1.0",
-    "reactstrap": "^8.6.0"
+    "reactstrap": "^8.6.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +52,6 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^5.5.0",
+    "cypress": "^5.5.0"
   }
 }
